<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textCertTitleText"
            android:id="@+id/textCertTitle"
            android:layout_gravity="left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textCertContentDefaultText"
            android:id="@+id/textCertFile"
            android:layout_gravity="left"
            android:layout_below="@+id/textCertTitle"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certButtonText"
            android:id="@+id/certButton"
            android:layout_gravity="right"
            android:layout_below="@+id/textCertFile"
            android:layout_centerHorizontal="true"
            android:onClick="onCertClick" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/button2"
        android:layout_below="@+id/certButton"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectButtonText"
        android:id="@+id/button"
        android:onClick="onConnectClick"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
