<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bnss.securefiletransfer.SelectFileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textTargetUserText"
        android:id="@+id/textTargetUser"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userSpinner"
        android:layout_below="@+id/textTargetUser"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/separator2"
        android:layout_below="@+id/userSpinner"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textSelectFileText"
        android:id="@+id/textSelectFile"
        android:layout_below="@+id/separator2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textSelectedFileDefaultText"
        android:id="@+id/textSelectedFile"
        android:layout_below="@+id/textSelectFile"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textFileBrowseButton"
        android:id="@+id/fileBrowseButton"
        android:layout_below="@+id/textSelectedFile"
        android:layout_alignParentStart="true"
        android:onClick="browseFile" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/separator3"
        android:layout_below="@+id/fileBrowseButton"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSendButton"
        android:id="@+id/sendButton"
        android:layout_below="@+id/separator3"
        android:layout_centerHorizontal="true"
        android:onClick="sendFile" />

</RelativeLayout>
